Fixes spacing on works index page

--- a/app/_scss/pages/works.scss
+++ b/app/_scss/pages/works.scss
@@ -80,6 +80,7 @@
 	#works {
 		main.index {
 			ul {
+				text-align: center;
 				padding-top: 0.7em;
 
 				li {
